--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  
-  "name": "test-qwidlocher",
+  "name": "test",
   "version": "1.0.0",
-  "main": "test.js"
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
